<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SAGPro</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_cart">Cart</string>
    <string name="tab_account">Account</string>
    <!-- Strings related to login -->
    <string name="prompt_email" tools:ignore="MissingTranslation">Email*</string>
    <string name="prompt_password" tools:ignore="MissingTranslation">Password*</string>
    <string name="prompt_firstname" tools:ignore="MissingTranslation">First Name*</string>
    <string name="prompt_lastname" tools:ignore="MissingTranslation">Last Name*</string>

    <string name="action_sign_in" tools:ignore="MissingTranslation">Sign in</string>
    <string name="action_sign_up" tools:ignore="MissingTranslation">Sign up</string>
    <string name="action_sign_in_short" tools:ignore="MissingTranslation">Sign in</string>
    <string name="welcome" tools:ignore="MissingTranslation">"Welcome!"</string>
    <string name="invalid_username" tools:ignore="MissingTranslation">Not a valid username</string>
    <string name="invalid_password" tools:ignore="MissingTranslation">Password must be >5 characters</string>
    <string name="login_failed" tools:ignore="MissingTranslation">"Login failed"</string>
    <string name="title_activity_login" tools:ignore="MissingTranslation">Login</string>
    <string name="login_regist_prompt" tools:ignore="MissingTranslation">Don\'t have an account?</string>
    <string name="login_regist_link" tools:ignore="MissingTranslation">Sign up now</string>

    <!--    <string name="title_activity_login" tools:ignore="MissingTranslation">Login</string>-->
    <string name="title_activity_regist" tools:ignore="MissingTranslation">Sign up</string>

    <string name="default_user_name" tools:ignore="MissingTranslation">phw82@sohu.com</string>
    <string name="default_password" tools:ignore="MissingTranslation">111111</string>

    <string name="account_home_page" tools:ignore="MissingTranslation">Home page</string>
    <string name="account_my_order" tools:ignore="MissingTranslation">My Order</string>

    <string name="category_title" tools:ignore="MissingTranslation">Categories</string>

    <string name="product_list_title" tools:ignore="MissingTranslation">Products</string>
    <string name="product_detail_title" tools:ignore="MissingTranslation">Product Detail</string>
    <string name="product_add_to_cart" tools:ignore="MissingTranslation">Add to Cart</string>

    <!-- program error -->
    <string name="error_no_network" tools:ignore="MissingTranslation">No network connected!</string>

    <!-- prompt -->
    <string name="prompt_sign_in" tools:ignore="MissingTranslation">Log in or sign up, start your wonderful journey</string>
    <string name="prompt_sign_up" tools:ignore="MissingTranslation">Create Account, sign up to get started!</string>
    <string name="prompt_exit" tools:ignore="MissingTranslation">Double click back to quit App!</string>
    <string name="prompt_input_only_digital" tools:ignore="MissingTranslation">Digital only!</string>

    <string name="prompt_loading_dialog" tools:ignore="MissingTranslation">Loading data......</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_fragment_cart_list" tools:ignore="MissingTranslation">Cart</string>

    <!-- account pages -->
    <string name="account_login_out" tools:ignore="MissingTranslation">Logout</string>
    <string name="account_login_in" tools:ignore="MissingTranslation">Login</string>
    <string name="account_default_user" tools:ignore="MissingTranslation">Default User</string>
    <string name="account_cart" tools:ignore="MissingTranslation">Carts</string>
    <string name="account_address" tools:ignore="MissingTranslation">Addresses</string>
    <string name="account_order" tools:ignore="MissingTranslation">Orders</string>

    <!-- cart pages -->
    <string name="prompt_set_address" tools:ignore="MissingTranslation">Set your address</string>
    <string name="button_set_address" tools:ignore="MissingTranslation">Set</string>
    <string name="label_unit" tools:ignore="MissingTranslation">USD</string>
    <string name="label_pay" tools:ignore="MissingTranslation">Pay</string>

    <!-- address -->
    <string name="title_activity_address_list" tools:ignore="MissingTranslation">Address List</string>
    <string name="button_add_address" tools:ignore="MissingTranslation">Add Address</string>
    <string name="button_update_address" tools:ignore="MissingTranslation">Update</string>
    <string name="button_delete_address" tools:ignore="MissingTranslation">Delete</string>

    <string name="label_address_name" tools:ignore="MissingTranslation">Name *</string>
    <string name="label_address_name_required" tools:ignore="MissingTranslation">Name required!</string>
    <string name="label_address_address" tools:ignore="MissingTranslation">Address *</string>
    <string name="label_address_address_required" tools:ignore="MissingTranslation">Address required!</string>
    <string name="label_address_phone" tools:ignore="MissingTranslation">Phone *</string>
    <string name="label_address_phone_required" tools:ignore="MissingTranslation">Phone required!</string>
    <string name="label_address_default" tools:ignore="MissingTranslation">Set as default</string>

    <string name="title_activity_address_add" tools:ignore="MissingTranslation">Address Add</string>
    <string name="title_activity_address_edit" tools:ignore="MissingTranslation">Address Edit</string>

    <!-- order -->
    <string name="title_activity_order_list" tools:ignore="MissingTranslation">Order List</string>


</resources>