<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.regist.RegistFragment">

    <TextView
        android:id="@+id/promptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_sign_up"
        android:textAppearance="@style/TextStyle_Prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/edittext_icon_left"
        android:paddingTop="@dimen/edittext_icon_topper"
        android:paddingBottom="@dimen/edittext_icon_footer"
        android:hint="@string/prompt_firstname"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/xml_border_with_corner"
        android:drawableLeft="@drawable/icon_username"
        android:textAppearance="@style/TextStyle_Input_Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptTV" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/edittext_icon_left"
        android:paddingTop="@dimen/edittext_icon_topper"
        android:paddingBottom="@dimen/edittext_icon_footer"
        android:paddingRight="10dp"
        android:hint="@string/prompt_lastname"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/xml_border_with_corner"
        android:drawableLeft="@drawable/icon_username"
        android:textAppearance="@style/TextStyle_Input_Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/edittext_icon_left"
        android:paddingTop="@dimen/edittext_icon_topper"
        android:paddingBottom="@dimen/edittext_icon_footer"
        android:hint="@string/prompt_email"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/xml_border_with_corner"
        android:drawableLeft="@drawable/iocn_email"
        android:textAppearance="@style/TextStyle_Input_Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/edittext_icon_left"
        android:paddingTop="@dimen/edittext_icon_topper"
        android:paddingBottom="@dimen/edittext_icon_footer"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/xml_border_with_corner"
        android:drawableLeft="@drawable/icon_password"
        android:textAppearance="@style/TextStyle_Input_Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/registButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/action_sign_up"
        android:textAppearance="@style/TextStyle_18_4"
        android:background="@drawable/xml_common_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>