<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/promptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_sign_in"
        android:textAppearance="@style/TextStyle_Prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/edittext_icon_left"
        android:paddingTop="@dimen/edittext_icon_topper"
        android:paddingBottom="@dimen/edittext_icon_footer"
        android:hint="@string/prompt_email"
        android:text="@string/default_user_name"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/xml_border_with_corner"
        android:drawableLeft="@drawable/iocn_email"
        android:textAppearance="@style/TextStyle_Input_Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptTV" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/edittext_icon_left"
        android:paddingTop="@dimen/edittext_icon_topper"
        android:paddingBottom="@dimen/edittext_icon_footer"
        android:hint="@string/prompt_password"

        android:imeActionLabel="@string/action_sign_in_short"
        android:text="@string/default_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/xml_border_with_corner"
        android:drawableLeft="@drawable/icon_password"
        android:textAppearance="@style/TextStyle_Input_Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

<!--    <TextView-->
<!--        android:id="@+id/usernameTV"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:text="@string/prompt_email"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/usernameEditText"-->
<!--        app:layout_constraintTop_toTopOf="@+id/usernameEditText"-->
<!--        tools:layout_editor_absoluteX="7dp" />-->

<!--    <EditText-->
<!--        android:id="@+id/usernameEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:hint="@string/prompt_email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:text="@string/default_user_name"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/passwordEditText"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/promptTV" />-->

<!--    <TextView-->
<!--        android:id="@+id/passwordTV"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/prompt_password"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"-->
<!--        app:layout_constraintStart_toStartOf="@+id/usernameTV"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />-->

<!--    <EditText-->
<!--        android:id="@+id/passwordEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:hint="@string/prompt_password"-->
<!--        android:imeActionLabel="@string/action_sign_in_short"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:inputType="textPassword"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:text="@string/default_password"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/passwordTV"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />-->

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_large_height"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:background="@drawable/xml_common_button"
        android:enabled="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/action_sign_in"
        android:textAppearance="@style/TextStyle_18_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.111" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_regist_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/registTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/login_regist_link"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        android:autoLink="all"/>


</androidx.constraintlayout.widget.ConstraintLayout>